<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/spacing_big"
            android:text="To which charity would you like to donate too?"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cause_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LOCAL"/>

            <TextView
                android:id="@+id/cause_international"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="INTERNATIONAL"/>

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/cause_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/cause_next"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:background="#0000FF"
        android:text="Next"/>

</LinearLayout>