<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal_s">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24"
            android:text="Would you like to get an overview of your transactions?"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter your bankaccount"/>

        <EditText
            android:id="@+id/iban_iban_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="IBAN"/>

        <TextView
            android:id="@+id/iban_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:id="@+id/iban_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal_s"
        android:gravity="center"
        android:text="Skip"/>

</LinearLayout>