<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Charity balance"/>

    <TextView
        android:id="@+id/balance_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_huge"
        android:text="E231,20" />

    <TextView
        android:id="@+id/balance_amount_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="E3,10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="since all-time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/balance_overview_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="overview"/>

        <TextView
            android:id="@+id/balance_detail_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="detail"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/balance_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>