<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF5C83FC"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/balance_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/img_header" />

            <TextView
                style="@style/shopaid_textstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.36"
                android:text="Your Charity Balance™"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance_amount"
                style="@style/shopaid_textstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="317dp"
                android:height="61dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.38"
                android:textColor="#FF2AFEC9"
                android:textSize="48sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/balance_period_alltime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/balance_period_alltime_text"
                        style="@style/shopaid_textstyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:width="48dp"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.33"
                        android:text="All Time"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/balance_period_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/balance_period_year_text"
                        style="@style/shopaid_textstyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:width="48dp"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.33"
                        android:text="Year"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/balance_period_month"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/balance_period_month_text"
                        style="@style/shopaid_textstyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:width="48dp"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.33"
                        android:text="Month"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/balance_period_week"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/balance_period_week_text"
                        style="@style/shopaid_textstyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:width="48dp"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.33"
                        android:text="Week"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="#DE000000" />

            <android.support.design.widget.TabLayout
                android:id="@+id/balannce_sliding_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabIndicatorColor="#FFFB58BB"
                app:tabMode="fixed"
                app:tabSelectedTextColor="#FFFB58BB"
                app:tabTextAppearance="@style/CustomTabAppearance"
                app:tabTextColor="#FF2A283F" />

            <android.support.v4.view.ViewPager
                android:id="@+id/balance_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <include
        layout="@layout/loading_layout"
        android:visibility="gone" />

</FrameLayout>