...
                android:paddingBottom="16dp"
                android:text="@string/text_partners_header"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/partners_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

        </LinearLayout>

        <Button
            android:id="@+id/partners_info_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/button_normal_bg"
            android:text="@string/text_done"
...
